# cursor_plugin

./: .gitignore  README.md
.cursor/: mcp.json.example
.cursor/commands/: kg-update.md  load-project.md  project-info.md  recent-projects.md  refresh-project.md
.cursor/rules/: knowledge-graph.mdc
mcp_server/: pyproject.toml
mcp_server/cursor_project_manager/: __init__.py  detect.py  kg.py  parser.py  registry.py  server.py
project-manager/: README.md
project-manager/.cursor-plugin/: plugin.json
project-manager/commands/: kg-update.md  load-project.md  new-project.md  project-info.md  recent-projects.md  refresh-project.md
project-manager/skills/project-context/: SKILL.md
project-manager/skills/project-context/references/: project-templates.md  tech-stack-patterns.md
